# python_piscine

./: README.md
0_Starting/ex00/: Hello.py
0_Starting/ex01/: format_ft_time.py
0_Starting/ex02/: find_ft_type.py
0_Starting/ex03/: NULL_not_found.py
0_Starting/ex04/: whatis.py  whatis_tester.sh
0_Starting/ex05/: building.py  building_tester.sh
0_Starting/ex06/: filterstring.py  filterstring_tester.sh  ft_filter.py  ft_filter_tester.py
0_Starting/ex07/: sos.py  sos_tester.sh
0_Starting/ex08/: Loading.py
0_Starting/ex09/: LICENSE  README.md  pyproject.toml
0_Starting/ex09/ft_package/: __init__.py
1_Array/ex00/: give_bmi.py  tester.py
1_Array/ex01/: array2D.py  tester.py
1_Array/ex03/: load_image.py  zoom.py
1_Array/ex04/: rotate.py
1_Array/ex05/: load_image.py  pimp_image.py
2_DataTable/ex01/: aff_life.py  load_csv.py
2_DataTable/ex02/: aff_pop.py
2_DataTable/ex03/: load_csv.py  projection_life.py
3_OOP/ex00/: tester.py
3_OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
3_OOP/ex03/: ft_calculator.py  tester.py
3_OOP/ex04/: ft_calculator.py  tester.py
4_Dod/ex00/: statistics.py  tester.py
4_Dod/ex01/: in_out.py  tester.py
4_Dod/ex02/: callLimit.py  tester.py
4_Dod/ex03/: new_student.py  tester.py
