[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Filip Farkas", email="ffarkas@student.42prague.com" },
]
description = "A simple package able to count occurrences of a string in a list."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ffarkas/python_piscine"
Issues = "https://github.com/ffarkas/python_piscine/issues"
